# wg_tool

./: CHANGELOG.md  LICENSE  Network-Notes.md  README.md  README.rst  pyproject.toml
Docs/: Changelog.pkg  Changelog.rst  Code-of-conduct.rst  Contributing.rst  Example-2.rst  Example-3.rst  Examples.rst  Howto-Build  License.rst  Network-Notes.rst  conf.py  index.rst
Docs/Sections/: Appendix.rst  Completion.rst  Helper-scripts.rst  Import.rst  Migrating.rst  Reports.rst
Docs/_build/html/: .buildinfo  .buildinfo.bak  Changelog.html  Code-of-conduct.html  Contributing.html  Example-1.html  Example-2.html  Example-3.html  Examples.html  License.html  Network-Notes.html  README.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
Docs/_static/: custom.css
archlinux/: PKGBUILD
contrib/: ubuntu.rst
examples/: create-example-1  create-example-2  create-example-3  wg-tool
packaging/: PKGBUILD  optional-requirements.txt  requirements.txt
scripts/: do-install  import_users  postup-alternate.nft  postup.nft  wg-peer-updn
src/wg_tool/: __about__.py  __init__.py  wg-tool.py
src/wg_tool/app/: __init__.py  cleanup.py  data_migration.py  tasks.py  tool.py
src/wg_tool/config/: __init__.py  _opts_base.py  class_opts.py  completion.py  options.py  options_save.py  read_config.py  work_dir.py  write_config.py  write_wg_server.py  write_wg_users.py
src/wg_tool/crypto/: __init__.py  digest.py  keys.py
src/wg_tool/data/: __init__.py  _strip_private.py  constants.py  mod_time.py  paths.py  perms.py  rename_dir.py  unlink_profile.py  write_db_file.py  write_dict.py
src/wg_tool/dns_resolver/: __init__.py  class_dns.py
src/wg_tool/ids/: __init__.py  identities.py  identity.py  parse_ids.py
src/wg_tool/lib/: __init__.py  class_ipinfo.py  class_opts.py  class_serv.py  class_user.py  class_wg.py  class_wgtopts.py  class_wgtserv.py  class_wgtuser.py  cleanup.py  cli_users.py  config_init.py  digest.py  file_check_match.py  file_tools.py  files_match.py  find_user_ip.py  import_user.py  key_change.py  keys.py  list_users.py  msg.py  options.py  options_save.py  read_config.py  run_prog.py  save_options.py  show_rpt.py  toml.py  user_import.py  users.py  users_list.py  utils.py  version.py  wg_server.py  wg_users.py  work_dir.py  write_config.py  write_configs.py  write_wg_server.py  (+1 more)
src/wg_tool/lib38/: import_user.py  note.py38  show_rpt.py
src/wg_tool/migrate/: __init__.py  migrate.py  server.py  server_data.py  user.py  user_profile.py  users.py
src/wg_tool/net/: __init__.py  cidr.py  ipinfo.py  netinfo.py  network.py  networks.py  shared.py  tools.py  types.py
(+98 files in other folders)
