[tool.poetry]
name = "wg_tool"
version = "2.0.0"
description = "Tool to administer wireguard VPN"
authors = ["Gene C"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
