[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wg_tool"
dynamic = ["version"]
description = "Tool to administer wireguard VPN (server and user configs)"
authors = [{ name = "Gene C", email = "arch@sapience.com" }]
license = "MIT"
readme = "README.rst"
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/gene-git/wg_tool/Docs"
Issues = "https://github.com/gene-git/wg_tool/issues"
Source = "https://github.com/gene-git/wg_tool"

[tool.hatch.version]
path = "src/wg_tool/lib/version.py"

[tool.hatch.envs.default]
# dependencies = [
#    "coverage[toml]>=6.5",
#    "pytest",
# ]

[[tool.hatch.envs.all.matrix]]
python = ["3.13", "3.14", "3.15"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  #"black>=23.1.0",
  #"mypy>=1.0.0",
  #"ruff>=0.0.243",
]
